--- a/vignettes/pd.Rmd
+++ b/vignettes/pd.Rmd
@@ -310,10 +310,6 @@ pbc_orsf$edema_05 <- NULL
 
 `r aorsf:::roxy_ice_explain()`
 
-```{r echo=FALSE}
-library(magrittr)
-```
-
 ## Classification
 
 Compute ICE using out-of-bag data for `flipper_length_mm = c(190, 210)`. 
@@ -336,7 +332,7 @@ There are two identifiers in the output:
 
 Note that predicted probabilities are returned for each class and each observation in the data. Predicted probabilities for a given observation and given variable value sum to 1. For example, 
 
-```{r}
+```{r, eval=FALSE}
 
 ice_oob %>%
  .[flipper_length_mm == 190] %>% 
@@ -345,6 +341,12 @@ ice_oob %>%
  sum()
 
 ```
+
+
+```{r echo=FALSE}
+1
+```
+
 
 ## Regression
 
